Add Stagewise toolbar integration and enhance login and home page UI
- Implement StagewiseToolbarClient for development mode toolbar
- Refactor login page to use UI components for improved styling
- Update home page with a demo card and navigation button
- Add Stagewise dependencies to package.json and package-lock.json
- Create extensions.json for VSCode recommendations

--- a/application/package.json
+++ b/application/package.json
@@ -26,6 +26,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@stagewise-plugins/react": "^0.5.0",
+    "@stagewise/toolbar-next": "^0.5.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
