feat: initialize application with Next.js, TypeScript, and Tailwind CSS
- Added package.json with dependencies for Next.js, React, and TypeScript.
- Configured PostCSS with Tailwind CSS.
- Included SVG assets for UI components.
- Set up TypeScript configuration for strict type checking and module resolution.

--- a/.shrimp/launchsaasfast/tasks.json
+++ b/.shrimp/launchsaasfast/tasks.json
@@ -4,10 +4,10 @@
       "id": "f50d3417-df84-4b7f-b042-8104b5f3c0aa",
       "name": "Initialiser le projet Next.js 15 avec TypeScript strict",
       "description": "Créer la structure de base du projet avec Next.js 15, TypeScript en mode strict, et les dépendances essentielles (Tailwind CSS, ESLint, Prettier). Configurer les fichiers de base : package.json, tsconfig.json, next.config.js, et structure de dossiers selon les standards du projet.",
-      "status": "pending",
+      "status": "completed",
       "dependencies": [],
       "createdAt": "2025-07-09T22:35:23.719Z",
-      "updatedAt": "2025-07-09T22:35:23.719Z",
+      "updatedAt": "2025-07-09T22:48:44.919Z",
       "relatedFiles": [
         {
           "path": "package.json",
@@ -42,7 +42,9 @@
       ],
       "implementationGuide": "1. Exécuter `npx create-next-app@latest launchsaasfast --typescript --tailwind --eslint --app`\\n2. Modifier tsconfig.json pour activer strict mode : `\\\"strict\\\": true, \\\"noUncheckedIndexedAccess\\\": true`\\n3. Configurer next.config.js avec options de sécurité : headers CSP, HSTS\\n4. Créer structure dossiers : /lib, /components, /config, /types, /services, /schemas\\n5. Installer dépendances additionnelles : @types/node, zod, clsx, tailwind-merge\\n6. Configurer ESLint strict et Prettier\\n7. Créer scripts npm : dev, build, start, lint, type-check",
       "verificationCriteria": "Le projet doit démarrer avec `npm run dev` sans erreurs TypeScript, ESLint doit passer sans warnings, la page d'accueil doit s'afficher avec Tailwind CSS fonctionnel, et la structure de dossiers doit être conforme aux standards du projet.",
-      "analysisResult": "Développement d'un starter SaaS sophistiqué avec authentification enterprise-grade, device confidence scoring conforme AAL NIST, et architecture modulaire Next.js 15 + Supabase + Redis. Phase 1 critique : fondations techniques avec setup Next.js, configuration hiérarchique, et schémas PostgreSQL avancés."
+      "analysisResult": "Développement d'un starter SaaS sophistiqué avec authentification enterprise-grade, device confidence scoring conforme AAL NIST, et architecture modulaire Next.js 15 + Supabase + Redis. Phase 1 critique : fondations techniques avec setup Next.js, configuration hiérarchique, et schémas PostgreSQL avancés.",
+      "summary": "Le projet Next.js a été initialisé correctement dans le répertoire existant, avec TypeScript strict, Tailwind CSS, ESLint et Prettier configurés. La structure des dossiers (/lib, /components, /config, /types, /services, /schemas) est en place, les dépendances supplémentaires installées, et le projet démarre sans erreurs avec `npm run dev`. ",
+      "completedAt": "2025-07-09T22:48:44.918Z"
     },
     {
       "id": "de1e23b3-f643-4f9c-883d-978739b81f51",
