feat: enhance project setup with Husky and lint-staged for improved code quality
- Added Husky for managing Git hooks and configured pre-commit hook to run lint-staged.
- Updated package.json to include lint:fix and format scripts.
- Created .lintstagedrc.json to define lint-staged behavior for JavaScript and TypeScript files.
- Enhanced VS Code settings and extensions recommendations for a better development experience.
- Updated tasks.json to reflect the completion of the development environment setup.

--- a/.shrimp/launchsaasfast/tasks.json
+++ b/.shrimp/launchsaasfast/tasks.json
@@ -50,14 +50,14 @@
       "id": "de1e23b3-f643-4f9c-883d-978739b81f51",
       "name": "Configurer l'environnement de développement et outils",
       "description": "Installer et configurer les outils de développement essentiels : VS Code settings, extensions recommandées, Git hooks (Husky), lint-staged, et scripts de qualité de code. Mettre en place l'environnement de développement optimal pour le projet.",
-      "status": "pending",
+      "status": "completed",
       "dependencies": [
         {
           "taskId": "f50d3417-df84-4b7f-b042-8104b5f3c0aa"
         }
       ],
       "createdAt": "2025-07-09T22:35:23.719Z",
-      "updatedAt": "2025-07-09T22:35:23.719Z",
+      "updatedAt": "2025-07-09T23:02:25.540Z",
       "relatedFiles": [
         {
           "path": ".vscode/settings.json",
@@ -87,7 +87,9 @@
       ],
       "implementationGuide": "1. Créer .vscode/settings.json avec config TypeScript, ESLint, Prettier\\n2. Créer .vscode/extensions.json avec extensions recommandées\\n3. Installer Husky : `npx husky-init && npm install`\\n4. Configurer pre-commit hook : lint-staged pour ESLint + Prettier\\n5. Créer .gitignore complet (node_modules, .env*, .next, etc.)\\n6. Configurer scripts package.json : lint:fix, format, prepare\\n7. Installer @types/react, @types/react-dom pour TypeScript support",
       "verificationCriteria": "Les commits doivent déclencher automatiquement lint-staged, les extensions VS Code doivent être suggérées à l'ouverture, ESLint et Prettier doivent fonctionner en mode auto-fix, et aucun fichier sensible ne doit être tracké par Git.",
-      "analysisResult": "Développement d'un starter SaaS sophistiqué avec authentification enterprise-grade, device confidence scoring conforme AAL NIST, et architecture modulaire Next.js 15 + Supabase + Redis. Phase 1 critique : fondations techniques avec setup Next.js, configuration hiérarchique, et schémas PostgreSQL avancés."
+      "analysisResult": "Développement d'un starter SaaS sophistiqué avec authentification enterprise-grade, device confidence scoring conforme AAL NIST, et architecture modulaire Next.js 15 + Supabase + Redis. Phase 1 critique : fondations techniques avec setup Next.js, configuration hiérarchique, et schémas PostgreSQL avancés.",
+      "summary": "Les configurations VS Code ont été créées (settings.json et extensions.json recommandées), Husky et lint-staged installés et configurés avec un hook pre-commit, les scripts npm de qualité de code (lint:fix et format) ajoutés, la configuration lint-staged (.lintstagedrc.json) et .gitignore mis à jour. Les commits déclenchent lint-staged et les règles de formatage, et les fichiers sensibles sont ignorés. ",
+      "completedAt": "2025-07-09T23:02:25.539Z"
     },
     {
       "id": "deb9a9d9-df14-459b-9db8-0ed791729260",
