--- a/application/package.json
+++ b/application/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "format": "prettier --write .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "15.3.5",
@@ -23,6 +26,8 @@
     "clsx": "^2.1.1",
     "eslint": "^9.30.1",
     "eslint-config-next": "15.3.5",
+    "husky": "^8.0.0",
+    "lint-staged": "^16.1.2",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwind-merge": "^3.3.1",
